fix z-index for components

--- a/player.css
+++ b/player.css
@@ -5,3 +5,11 @@
   min-width: 250px;
   min-height: 250px;
 }
+
+.slant.player .frame {
+  z-index: 99;
+}
+
+.slant.player .controls {
+  z-index: 100;
+}
